REFACTOR(booking)
feat:

1) Добавил сервис временного окна
2) Добавил создание qr-кода для арендатора
3) Добавил отображение qr-кода в профиле арендатора
4) Частисно обновил сваггер
