# app/Handlers/Profile/GetProfileHandler.php
@@ -2,12 +2,31 @@
 
 namespace App\Handlers\Profile;
 
+use App\Models\Booking;
+use App\Models\Qr;
 use App\Models\User;
 
 final class GetProfileHandler
 {
     public function handle(User $user): array
     {
+        $booking = Booking::query()
+            ->where('user_id', $user->id)
+            ->where('status', 'active')
+            ->where('pass_type', 'qr')
+            ->where('end_time', '>=', now())
+            ->orderBy('start_time')
+            ->first();
+
+        $qr = null;
+
+        if ($booking) {
+            $qr = Qr::query()
+                ->where('booking_id', $booking->id)
+                ->where('user_id', $user->id)
+                ->first();
+        }
+
         return [
             'id' => $user->id,
             'photo' => $user->photo,
@@ -16,6 +35,7 @@ final class GetProfileHandler
             'patronymic' => $user->patronymic,
             'phone' => $user->phone,
             'email' => $user->email,
+            'qr_hash' => $qr?->hash,
             'created_at' => $user->created_at,
             'updated_at' => $user->updated_at,
         ];
